# grocery-agent

./: .env.example  .gitignore  README.md  ingredient_matcher.py  pyproject.toml  run_jumbo.py
grocery_agent/: __init__.py  aggregate.py  db.py  fetch.py  grocery_list.py  ingredient_normalizer.py  llm.py  models.py  quantity_parser.py  recipe.py  web.py
grocery_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
grocery_agent/jumbo/: __init__.py  __main__.py  config.py  prompts.py  runner.py
grocery_agent/templates/: base.html  checklist.html  confirm.html  home.html  household.html  index.html  list.html  recipe.html  recipe_edit.html
